--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="css/main.css"></link>
+    </head>
     <body>
-        Hello world!
+        <p class="title">Hello world!</p>
     </body>
 </html>
